--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "responsive-website",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/s3m4nt/responsive-website01#readme",
   "keywords": [],
   "dependencies": {
-    "normalize": "^0.3.1"
+    "normalize": "^0.3.1",
+    "sass": "^1.42.1"
   }
 }
